--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ a.white {
 	display: inline-block;
 	padding: 1.1875rem 2.125rem 1.1875rem 2.125rem;
 	border: 0.125rem solid #00bfd8;
-	border-radius: 2rem;
+	border-radius: 0.5rem;
 	background-color: #00bfd8;
 	color: #fff;
 	font: 700 0.75rem/0 "Raleway", sans-serif;
@@ -174,7 +174,7 @@ a.white {
 	display: inline-block;
 	padding: 1.1875rem 2.125rem 1.1875rem 2.125rem;
 	border: 0.125rem solid #00bfd8;
-	border-radius: 2rem;
+	border-radius: 0.5rem;
 	background-color: transparent;
 	color: #00bfd8;
 	font: 700 0.75rem/0 "Raleway", sans-serif;
@@ -192,7 +192,7 @@ a.white {
 	display: inline-block;
 	padding: 1.375rem 2.625rem 1.375rem 2.625rem;
 	border: 0.125rem solid #00bfd8;
-	border-radius: 2rem;
+	border-radius: 0.5rem;
 	background-color: transparent;
 	color: #00bfd8;
 	font: 700 0.75rem/0 "Raleway", sans-serif;
@@ -368,7 +368,7 @@ input[type='checkbox'] {
 	width: 100%;
 	height: 3.125rem;
 	border: 1px solid #00bfd8;
-	border-radius: 1.5rem;
+	border-radius: 0.5rem;
 	background-color: #00bfd8;
 	color: #fff;
 	font: 700 0.75rem/1.75rem "Raleway", sans-serif;
@@ -1153,8 +1153,8 @@ input[type='checkbox'] {
 /*     11. Video     */
 /*********************/
 .basic-3 {
-	padding-top: 6.875rem;
-	padding-bottom: 6.125rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 
 .basic-3 h2 {
@@ -2190,3 +2190,16 @@ a:hover.back-to-top {
 	/* end of extra pages */
 }
 /* end of min-width width 1200px */
+
+
+.feature-link {
+	padding: 0.625rem 0.75rem 0.625rem 0.75rem;
+	color: #393939;
+	text-decoration: none;
+	
+}
+
+.feature-link:hover {
+	color: #00bfd8;
+	text-decoration:none;
+}
