--- a/css/styles.css
+++ b/css/styles.css
@@ -2205,3 +2205,20 @@ a:hover.back-to-top {
 }
 
 
+#earlyAccessForm {
+	background: #fff;
+	clear: left;
+	font: 14px Helvetica, Arial, sans-serif;
+}
+.form-control {
+	width: 100%; /* Full width */
+	padding: 10px; /* Padding for the input */
+	border: 1px solid #ccc; /* Border style */
+	border-radius: 4px; /* Rounded corners */
+	box-shadow: none; /* Remove default shadow */
+}
+.form-control:focus {
+	border-color: #007bff; /* Focus color */
+	outline: none; /* Remove default outline */
+	box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Custom shadow on focus */
+}
